--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="utf-8">
 
-    <title>The HTML5 Herald</title>
+    <title>Recall Ted</title>
     <meta name="description" content="The HTML5 Herald">
-    <meta name="author" content="SitePoint">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
-    <script src="js/scripts.js"></script>
+
+    <h3 class="title">Days until Ted Wheeler can be recalled</h3>
+    <h1 id='days' class="days"></h1>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
