--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <title>Recall Ted</title>
-    <meta name="description" content="Soon we can get rid of him">
+    <meta id="description" name="description" content="Soon we can get rid of him">
 
     <link rel="stylesheet" href="styles.css">
 
